# BTC-ratio-alert-bot

./: .env.example  .gitignore  CONTRIBUTING.md  FINAL_HANDOVER.md  LIVE_SETTINGS.md  PROJECT_VALIDATION_DOCUMENT.md  README.md  RUNBOOK.md  SECURITY.md  config.example.toml  config.local-demo.toml  pyproject.toml
.github/: REPOSITORY_ABOUT.md
delta_ratio_bot/: __init__.py  alerts.py  app.py  config.py  delta_client.py  models.py  scanner.py  websocket_source.py
deployment/: delta-ratio-bot.service.example
scripts/: demo_local.sh  health_check.sh  run_live.sh  run_once.sh  test_telegram.sh
tests/: test_alerts.py  test_operations.py  test_scanner.py
