[project]
name = "delta-btc-ratio-alert-bot"
version = "0.1.0"
description = "Telegram alerts for Delta Exchange BTC options multi-expiry ratio spreads."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "aiohttp>=3.9.0",
  "certifi>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/anmol-228/BTC-ratio-alert-bot"
Repository = "https://github.com/anmol-228/BTC-ratio-alert-bot"
Issues = "https://github.com/anmol-228/BTC-ratio-alert-bot/issues"

[tool.ruff]
line-length = 100
